--- a/styles/style.css
+++ b/styles/style.css
@@ -1,310 +1,184 @@
-/* 
+
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 
-.dancing-script-shape{
+.dancing-script-styles {
   font-family: "Dancing Script", cursive;
-  font-optical-sizing: auto;
-  font-weight: 520;
-  font-style: normal;
-  font-size: 4.8rem;
-}
-
-
-.hader-style{
-    max-width: 1240px;
-    margin: 0 auto;
-}
-.body{
-    background-color: #111111;
-}
-
-.nav-links{
-    display: flex;
-    justify-content: space-between;
-    
-    align-items: center;
-   
-}
-.text-1{
-    color: #FFFFFF;
+  font-optical-sizing: 4.8rem;
+  font-weight: 800;
+  font-style: italic;
 }
    
-
-
-
-.link-li{
-    align-items: center;
-    padding: 5px;
-    display: flex;
-    gap: 64px;
-    background-color:rgba(255,255,255,0.1) ;
-    border-radius: 5px ;
-    border: 1px solid;
    
-}
-.link{
-    list-style: none;
-    text-decoration: none;
-    font-size: 1.12rem;
-    color: #FFFFFF;
-}
-.home-link{
-    background-color: #E6533C;
-    width: 92px;
-    height: 38px;
-    border-radius: 46px;
-    text-align: center;
-     line-height: 38px;
- 
-}
-.banner-style{
-    gap: 280px;
-
+   
+   .body {
+      font-family: Arial, sans-serif;
+      background-color: #111111;
+      color: white;
+      width: 1440px;
+      justify-content: center;
+      margin: auto;
     
-}
-
-.dark2{
-    color: rgba(255, 255, 255, 0.5);
-
-}
-.button-primary{
-    background-color: #E6533C;
-    width: 224px;
-    height: 54px;
-    border-radius: 42px;
-    color: #FFFFFF;
-    padding: 16px 40px;
-    font-size: 1.2rem;
-}
-
-.display-flex{
-    display: flex;
-}
-.box{
-    color: #FFFFFF;
-    border-radius: 12px;
-    border: 1px solid #FFFFFF; 
-    background-color: rgba(48, 48, 48, 0.54);
-    width: 206px;
-    height: 96px;
-}
-.button-primary1{
-   width: 224px;
-height: 54px;
-border-radius: 42px; 
-color: #FFFFFF;
-padding: 16px 40px;
-font-size: 1.2rem;
-background-color: #111111;
-border: 1px solid #FFFFFF; 
+    }
 
 
-}
-
-
-.brand{
-    color: #E6533C;
-    font-size: 2.24rem;
-    font-weight: 800;
-    font-weight: 132px;
-  
-    font-style: italic;
+    .header {
     
-}
-
-.nav-links , .banar-title,.taxt-box{
+      /* background-color: #000; */
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 1440px;
+      height: 700px;
+      margin: auto; 
+       margin-top: 0;
+      margin-top: -300px;
      
-    max-width: 1440px;
-    max-height: 600px;
 
-}
-.banar-title-text-1{
-    font-size: 4.8rem;
-    color: #FFFFFF;
-    height: 282px;
-    width: 520px;
+    }
 
-}
-.titile-p{
-    margin-top: 0;
-    width: 520px;
-    
-}
-/* img{
-    gap: 30px;
-} */
-.box1{
-    border: 1px solid ;
-    background-color: rgba(48, 48, 48, 0.54);
-    color:#FFFFFF ;
-    width: 193px;
-    height: 92px;
-    text-align: center;
-    transform: translateX(1000px) translateY(-450px) ;
-    border-radius: 12px;
-    margin: 0;
-    
-    
-    
-}
-.box2{
-    border: 1px solid ;
-    background-color: rgba(48, 48, 48, 0.54);
-    color:#FFFFFF ;
-    width: 193px;
-    height: 92px;
-    text-align: center;
-       transform: translateX(700px) translateY(-250px);
+    .header{
+         
+      
+    }
 
-} 
-/* .box2{
-    width: 50%;
-    height: 50%;
-    border-radius: 50%;
-    background-color: red;
-    transform: translateX(50px);
-     /* transform: translateX(1000px) translateY(-450px) ; */
-    /* position: relative; */
-    /* transform: translateX(300px) translateY(-300px); */
-*/
-.tr{
-    font-size: 1.5rem;
-}
+    .brand-name {
+      font-size: 24px;
+      color: #E6533C;
+      font-style: italic;
+      font-weight: 800;
+      font-size: 2.25rem;
+    }
 
-.main-title{
-    text-align: center;
-    color: #FFFFFF;
-    font-size: 3rem;
-}
-.alin{
-    
-    width: 671px;
-    margin: 0 auto;
-    justify-items: center;
-    height: 48px;
-    text-align: center;
-    
-}
+    .menu-toggle {
+      display: none;
+    }
 
+    .menu-icon {
+      display: none;
+      font-size: 50px;
+      color: white;
+      cursor: pointer;
+    }
 
-@media screen  and (max-width:576px){
-    .display-flex {
-    flex-direction: column;
-    gap: 40px;
-    align-items: center;
-  }
+    .link-li {
+      display: flex;
+      gap: 47px;
+      border-radius: 39px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      padding: 4px 4px;
+      margin: 0;
+      color: #FFFFFF;
 
-  .box1{
-    border: 1px solid ;
-    background-color: rgba(48, 48, 48, 0.54);
-    color:#FFFFFF ;
-    width: 193px;
-    height: 92px;
-    text-align: center;
-    transform: translateX(260px) translateY(-450px) ;
-    border-radius: 12px;
-    margin: 0;
-  }
-  .box2{
-    border: 1px solid ;
-    background-color: rgba(48, 48, 48, 0.54);
-    color:#FFFFFF ;
-    width: 193px;
-    height: 92px;
-    text-align: center;
-    transform: translateX(80px) translateY(-250px);
-    /* transform: translateX(350px) translateY(80px); */
+    }
 
-} 
+    .link-li li {
+      list-style: none;
+    }
 
-  .img-resposive {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
+    .link-li li a {
+      color: white;
+      text-decoration: none;
+      font-size: 1rem;
+    }
 
-  .banar-title-text-1,
-  .titile-p {
-    width: 90%;
-    text-align: center;
-  }
-  .button-primary1{
-    display: grid;
-    grid-template-rows: auto;
-  }
+    .home-link a {
+        width: 92px;
+        height: 38px;
+      background-color: #E6533C;
+      padding: 8px 12px;
+      border-radius: 42px;
+      font-size: 1.2rem;
 
-  .link-li {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 70px;
-    right: 20px;
-    background-color: #222;
-    padding: 20px;
-    border-radius: 10px;
-    z-index: 100;
-  }
+    }
+    .container1{
+        width: 144opx;
+        
+        display: flex;
+        justify-content: space-between;
+        justify-items: center;
+        gap: 200px;
+    }
 
-  .link-li.show {
-    display: flex;
-  }
+    .brand-title{
+        width:470px ;
+        height:282px ;
+        
+        font-size: 4.8rem;
+        
+        font-style: normal;
 
-  .menu-icon {
-    display: block;
-  }
-
-  .nav-links {
-    position: relative;
-  }
-  .manu-style{
-    color: #FFFFFF;
-  }
-}
-
+        
+    }
+    .bg-img{
+        background-image: url(../images/Images\ 2.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        /* transform: translateX(-280px) translateY(-100px); */
+      
     
 
+     
+    }
+    .box1{
+        border-radius: 12px;
+        width: 193px;
+        height: 92px;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        text-align: start;
+        margin-right: 150px;
+        
+        
+    }
+    .box2{
+        border-radius: 12px;
+        width: 193px;
+        height: 92px;
+        background-color:  rgba(48, 48, 48, 0.54) ;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        text-align: start;
+        transform: translateX(-100px);
+        margin-top: 230px;
+        /* transform: translateX(-100px) translateY(400px); */
 
-@media screen and (min-width: 576px) and (max-width: 996px) {
-  .display-flex {
-    flex-direction: column;
-    gap: 40px;
-    align-items: center;
-  }
+    }
+    h5{
+        margin-top: 0;
+    }
+   
 
-  .box1{
-    border: 1px solid ;
-    background-color: rgba(48, 48, 48, 0.54);
-    color:#FFFFFF ;
-    width: 193px;
-    height: 92px;
-    text-align: center;
-    transform: translateX(430px) translateY(-450px) ;
-    border-radius: 12px;
-    margin: 0;
-  }
-  .box2{
-    border: 1px solid ;
-    background-color: rgba(48, 48, 48, 0.54);
-    color:#FFFFFF ;
-    width: 193px;
-    height: 92px;
-    text-align: center;
-    transform: translateX(80px) translateY(-250px);
-    /* transform: translateX(350px) translateY(80px); */
 
-} 
+    #txt-title{
 
-  .img-resposive {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
+    }
 
-  .banar-title-text-1,
-  .titile-p {
-    width: 90%;
-    text-align: center;
-  }
-}
+    /* ---------- Responsive for ≤576px ---------- */
+    @media screen and (max-width: 576px) {
+      .menu-icon {
+        display: block;
+      }
 
- */
+      .link-li {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        /* top: 60px; */
+        right: 20px;
+        background-color: #222;
+        padding: 16px;
+        border-radius: 8px;
+        z-index: 100;
+        color: #FFFFFF;
+      }
+
+      .menu-toggle:checked ~ .link-li {
+        display: flex;
+      }
+    }
+
+    @media screen and (min-width: 577px) {
+      .menu-toggle,
+      .menu-icon {
+        display: none;
+        color: #FFFFFF;
+      }
+    }
